--- a/local/import/marc_ole.properties
+++ b/local/import/marc_ole.properties
@@ -11,19 +11,20 @@ donor_code = 097d:098d
 url = 856u:555u:098u
 
 # index callnumber for advanced search both without and with prefix
-callnumber = custom, getFullCallNumber(097a:099a:097ab:099ab)
-callnumber-a = 098a:099a, first
-callnumber-first = 098a[0]:090a[0]:050a[0], callnumber_map.properties, first
-callnumber-first-code = 098a[0]:099a[0], first
-callnumber-subject = custom, getCallNumberSubject(090a:050a), callnumber_subject_map.properties
-callnumber-subject-code = custom, getCallNumberSubject(090a:050a)
-callnumber-label = custom, getCallNumberLabel(090a:050a)
-callnumber_browse = script(ucOLECallNumber.bsh), getOLEcallNumber(display)
-callnumber-search = script(ucOLECallNumber.bsh), getLCSearchable(097a:099a:097ab:099ab)
-callnumber-sort = script(ucOLECallNumber.bsh), getLCSortable(097a:099a:097ab:099ab)
+callnumber-first = 097a[0]:098a[0]:099a[0], callnumber_map.properties, first
+callnumber-subject = custom, getCallNumberSubject(097a:098a:099a), callnumber_subject_map.properties
+callnumber-label = custom, getCallNumberLabel(097a:098a:099a)
+#callnumber_browse = script(ucOLECallNumber.bsh), getOLEcallNumber(display)
+#callnumber-search = script(ucOLECallNumber.bsh), getLCSearchable(097a:099a:097ab:099ab)
+#callnumber-sort = script(ucOLECallNumber.bsh), getLCSortable(097a:099a:097ab:099ab)
+callnumber-sort = custom, getLCSortable(097a:098a:099a)
+callnumber-raw = script(ucOLECallNumber.bsh), getOLEcallNumber(display)
+#callnumber-raw = custom, getCallnumberByType(097a:099a,t,LC)
+callnumber-search = 097a:097ab:098a:098ab:099a:099ab
 
-dewey-hundreds = custom, getDeweyNumber(083a, 100), ddc22_map.properties(hundreds)
-dewey-tens = custom, getDeweyNumber(083a, 10), ddc22_map.properties(tens)
-dewey-ones = custom, getDeweyNumber(083a, 1), ddc22_map.properties(ones)
-dewey-full = custom, getDeweySearchable(083a)
+dewey-hundreds = custom, getDeweyNumber(097a:098a:099a, 100), ddc22_map.properties(hundreds)
+dewey-tens = custom, getDeweyNumber(097a:098a:099a, 10), ddc22_map.properties(tens)
+dewey-ones = custom, getDeweyNumber(097a:098a:099a, 1), ddc22_map.properties(ones)
+dewey-full = custom, getDeweySearchable(097a:098a:099a)
 dewey-raw = script(ucOLECallNumber.bsh), getOLEdeweyRaw()
+#dewey-raw = custom, getCallnumberByType(097a:099a,t,LC)
