corrected callnumber type for callnumber-raw in import config

--- a/local/import/marc_ole.properties
+++ b/local/import/marc_ole.properties
@@ -15,7 +15,7 @@ callnumber-first = 097a[0]:098a[0]:099a[0], callnumber_map.properties, first
 callnumber-subject = custom, getCallNumberSubject(097a:098a:099a), callnumber_subject_map.properties
 callnumber-label = custom, getCallNumberLabel(097a:098a:099a)
 callnumber-sort = custom, getLCSortable(097a:098a:099a)
-callnumber-raw = custom, getCallNumberByType(097a:098a:099a,t,LC)
+callnumber-raw = custom, getCallNumberByType(097a:098a:099a,t,LCC)
 callnumber-search = 097a:097ab:098a:098ab:099a:099ab
 
 dewey-hundreds = custom, getDeweyNumber(097a:098a:099a, 100), ddc22_map.properties(hundreds)
