Collection/Location fixes bug# 14152.

--- a/local/import/marc_ole.properties
+++ b/local/import/marc_ole.properties
@@ -1,6 +1,5 @@
 
-
-building = 097c:098c:099c:098l:099l, uc_locations.properties
+building =  script(ucOLEcollections.bsh), getCollection
 item_collection = 097c:098c:099c, uc_OLEcollection_map.properties
 #item_collection = script(ucCollections.bsh), getCollection, uc_collection_map.properties
 
