--- a/local/import/translation_maps/uc_OLEcollection_map.properties
+++ b/local/import/translation_maps/uc_OLEcollection_map.properties
@@ -2,7 +2,7 @@ AmDrama = American Drama
 AmNewsp = American Newspapers
 Arch    = Archives/Manuscripts
 ArcMon  = Archives/Manuscripts
-ArcRefl = Archives/Manuscripts
+ArcRef1 = Archives/Manuscripts
 ArcSer  = Archives/Manuscripts
 Mss     = Archives/Manuscripts
 ACASA   = Archives of Czechs and Slovaks Abroad
