--- a/local/import/translation_maps/uc_map.properties
+++ b/local/import/translation_maps/uc_map.properties
@@ -42,7 +42,7 @@ location.pattern_41 =SOA=>Regenstein Reference
 location.pattern_42 =Slav=>Regenstein Reference
 location.pattern_43 =JRLRES=>Regenstein Reserves
 location.pattern_44 =ITS=>Regenstein TECHB@R
-location.pattern_45 =SPCL=>Special Collections Research Center
+location.pattern_45 =RareCr=>Crerar Library
 location.pattern_46 =ACASA=>Special Collections Research Center
 location.pattern_47 =Lincke=>Special Collections Research Center
 location.pattern_48 =MSSASR=>Special Collections Research Center
@@ -54,3 +54,4 @@ location.pattern_53 =ARCHASR=>Special Collections Research Center
 location.pattern_54 =unk=>unknown
 location.pattern_55 =AANet=>Internet
 location.pattern_56 =CMC=>Regenstein Library
+location.pattern_57 =SPCL=>Special Collections Research Center
