XXKs should appear in K call number facet -- Bug 16748

--- a/local/import/marc_ole.properties
+++ b/local/import/marc_ole.properties
@@ -10,7 +10,7 @@ donor_code = 097d:098d
 url = 856u:555u:098u
 
 # index callnumber for advanced search both without and with prefix
-callnumber-first = 097a[0]:098a[0]:099a[0], callnumber_map.properties, first
+callnumber-first = 097a[0]:098a[0]:099a[0], uc_callnumber_map.properties, first
 callnumber-subject = custom, getCallNumberSubject(097a:098a:099a), callnumber_subject_map.properties
 callnumber-label = custom, getCallNumberLabel(097a:098a:099a)
 callnumber-sort = custom, getLCSortable(097a:098a:099a)
