Federal govt docs facet

--- a/local/import/translation_maps/format_map.properties
+++ b/local/import/translation_maps/format_map.properties
@@ -36,5 +36,6 @@ SoundRecording      = Sound Recording
 Text                = Text
 Video               = Video
 tapeVideo           = Video cassette
+USfedGovDoc         = U.S. Federal Government Document
 Unknown             = Unknown
 
