Added RecASR collection for Mansueto Library

--- a/local/import/translation_maps/map.properties
+++ b/local/import/translation_maps/map.properties
@@ -21,7 +21,7 @@ location.pattern_19 =RRADiss=>Mansueto Library
 location.pattern_20 =SciASR=>Mansueto Library
 location.pattern_21 =JRL=>Regenstein Library
 location.pattern_22 =JRLASR=>Regenstein Library
-location.pattern_23 =Rec=>Regenstein Recordings
+location.pattern_23 =RecASR=>Mansueto Library
 location.pattern_24 =ArtResA=>Regenstein Reference
 location.pattern_25 =CJKRef=>Regenstein Reference
 location.pattern_26 =CJKRfHY=>Regenstein Reference
@@ -52,3 +52,4 @@ location.pattern_51 =SSAd=>SSA
 location.pattern_52 =SSAdRes=>SSA Reserves
 location.pattern_53 =unk=>unknown
 location.pattern_54 =AANet=>Internet
+location.pattern_55 =Rec=>Regenstein Recordings
