--- a/local/import/translation_maps/uc_locations.properties
+++ b/local/import/translation_maps/uc_locations.properties
@@ -63,13 +63,14 @@ LawSupr       =Mansueto Library
 RRADiss       =Mansueto Library
 SciASR        =Mansueto Library
 Harp          =Regenstein Library
+Rec    =Regenstein Library
+SPCL     =Special Collections Research Center
 JzAr    =Regenstein Library
 MapCl    =Regenstein Library
 MapRef    =Regenstein Library
 Mic    =Regenstein Library
 MidEMic    =Regenstein Library
 MSRGen    =Regenstein Library
-Rec    =Regenstein Library
 RecHP    =Regenstein Library
 JRLRES       =Regenstein Library
 Resup    =Regenstein Library
@@ -185,4 +186,5 @@ SSAdPer      =SSA
 SSAdRef      =SSA
 SSAdRes      =SSA
 SSAdRes      =SSA Reserves
+RecASR       =Mansueto Library
 SPCL     =Special Collections Research Center
