--- a/local/import/translation_maps/uc_map.properties
+++ b/local/import/translation_maps/uc_map.properties
@@ -21,7 +21,7 @@ location.pattern_19 =RRADiss=>Mansueto Library
 location.pattern_20 =SciASR=>Mansueto Library
 location.pattern_21 =JRL=>Regenstein Library
 location.pattern_22 =JRLASR=>Regenstein Library
-location.pattern_23 =Rec=>Regenstein Recordings
+location.pattern_23 =RecASR=>Mansueto Library 
 location.pattern_24 =ArtResA=>Regenstein Reference
 location.pattern_25 =CJKRef=>Regenstein Reference
 location.pattern_26 =CJKRfHY=>Regenstein Reference
@@ -55,3 +55,4 @@ location.pattern_54 =unk=>unknown
 location.pattern_55 =AANet=>Internet
 location.pattern_56 =CMC=>Regenstein Library
 location.pattern_57 =SPCL=>Special Collections Research Center
+location.pattern_58 =Rec=>Regenstein Recordings
