BUG#18290  Changed the call number browse index to include all call numbers, regardless of type, and remove the Dewey call number index.

--- a/local/import/marc_ole.properties
+++ b/local/import/marc_ole.properties
@@ -14,8 +14,16 @@ callnumber-first = 097a[0]:098a[0]:099a[0], uc_callnumber_map.properties, first
 callnumber-subject = custom, getCallNumberSubject(097a:098a:099a), callnumber_subject_map.properties
 callnumber-label = custom, getCallNumberLabel(097a:098a:099a)
 callnumber-sort = custom, getLCSortable(097a:098a:099a)
-callnumber-raw = custom, getCallNumberByType(097a:098a:099a,t,LCC)
+callnumber-raw = 097a:098a:099a
 callnumber-search = 097a:097ab:098a:098ab:099a:099ab
+
+
+#Old callnumber configurations
+#callnumber-raw = custom, getCallNumberByType(097a:098a:099a,t,LCC)
+#callnumber-search = 097a:097ab:098a:098ab:099a:099ab
+#callnumber-label = 097a:098a:099a
+#callnumber-sort = 097a:098a:099a
+
 
 dewey-hundreds = custom, getDeweyNumber(097a:098a:099a, 100), ddc22_map.properties(hundreds)
 dewey-tens = custom, getDeweyNumber(097a:098a:099a, 10), ddc22_map.properties(tens)
