--- a/local/import/marc.properties
+++ b/local/import/marc.properties
@@ -21,9 +21,9 @@ format = script(uc_format.bsh), getFormat, format_map.properties
 
 author = custom, removeTrailingPunct(100abcdjq)
 author_fuller = 100q, first
-author-letter = 100a,first
+#author-letter = 100a, first
 author2 = custom, removeTrailingPunct(110abcdgn:111acdegnq:400abcdjq:410abcdgn:411acdegnq:505r:700abcdjq:710abcdgn:711acdegnq:720a:773a:775a:776a:787a:800abcdjq:810abcdgn:811acdegnq) 
-author2-role = 700e:710e
+#author2-role = 700e:710e
 author_additional = 505r
 author_LNK = LNK100abcdjq:LNK110abcdgn:LNK111acdegnq:LNK400abcdjq:LNK410abcdgn:LNK411acdegnq:LNK505r:LNK700abcdjq:LNK710abcdgn:LNK711acdegnq:LNK720a:LNK773a:LNK775a:LNK776a:LNK787a:LNK800abcdjq:LNK810abcdgn:LNK811acdegnq
 author_contents = 505a:505r
@@ -33,21 +33,21 @@ author_facet = script(ucAuthorBrowseFunctions.bsh), getAuthorBrowseFieldsAsSet(1
 title = 245abdefgknps, first
 title_sub = 245b, first
 title_short = 245a, first
-title_full = custom, getAllAlphaExcept(245c)
+title_full = 245[abd-z0-9]
 title_author = 245ab, first
 title_alt = custom, getAllSubfields(210:242:246:247:740:780:785:787, " ")
 title_old = 526a:710t:711t
 title_LNK = LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t
 title_new = 785ast:LNK785ast
 title_sort = custom, getSortableTitle
-title_browse = script(ucTitleBrowseFunctions.bsh), titleBrowse(130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t)
-title_browse_sort = script(ucTitleBrowseFunctions.bsh), titleBrowseSort(130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t)
+title_browse = 130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t, clean
+title_browse_sort = 130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t, clean
 title_uniform = 130adfghklmnoprst:240adfghklmnoprs:730adfghiklmnoprstx
 title_contents = 505a:505t
 
 series = 400abcdfgklnptuvx:410abcdfgklnptuvx:411acdefgklnpqtuvx:440anpvx:490avx:LNK400abcdfgklnptuvx:LNK410abcdfgklnptuvx:LNK411acdefgklnpqtuvx:LNK440anpvx:LNK490avx
 series2 = 800abcdfghjklmnopqrstuv:810abcdfghklmnoprstuv:811acdefghklnpqstuv:830adfghklmnoprstv:840ahv:LNK800abcdfghjklmnopqrstu:LNK810abcdfghklmnoprstu:LNK811acdefghklnpqstu:LNK830adfghklmnoprst:LNK840ah
-series_browse = script(ucTitleBrowseFunctions.bsh), getSortableFieldsAsSet(400abcdfgklnptu:410abcdfgklnptu:411acdefgklnpqtu:440anp:490a:LNK400abcdfgklnptu:LNK410abcdfgklnptu:LNK411acdefgklnpqtu:LNK440anp:LNK490a:800abcdfghjklmnopqrstu:810abcdfghklmnoprstu:811acdefghklnpqstu:830adfghklmnoprst:840ah:LNK800abcdfghjklmnopqrstu:LNK810abcdfghklmnoprstu:LNK811acdefghklnpqstu:LNK830adfghklmnoprst:LNK840ah)
+series_browse = 400abcdfgklnptu:410abcdfgklnptu:411acdefgklnpqtu:440anp:490a:LNK400abcdfgklnptu:LNK410abcdfgklnptu:LNK411acdefgklnpqtu:LNK440anp:LNK490a:800abcdfghjklmnopqrstu:810abcdfghklmnoprstu:811acdefghklnpqstu:830adfghklmnoprst:840ah:LNK800abcdfghjklmnopqrstu:LNK810abcdfghklmnoprstu:LNK811acdefghklnpqstu:LNK830adfghklmnoprst:LNK840ah, clean
 
 publisher = 260bf:261bef:262bk:264b:LNK260bf:LNK261bef:LNK262bk:LNK264b
 publishDate = custom, getPublicationDate
@@ -67,7 +67,7 @@ journal_browse = script(ucTitleBrowseFunctions.bsh), journalBrowse(130a:210ab:21
 journal_browse_sort = script(ucTitleBrowseFunctions.bsh), journalBrowseSort(130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp:740anp:840av:LNK130a:LNK210ab:LNK211a:LNK212a:LNK214a:LNK242abnp:LNK245abnp:LNK246abnp:LNK247abnp:LNK740anp:LNK840av)
 
 #  topic is Topic/Genre
-topic = custom, getAllAlphaSubfields(600:610:611:630:648:650:651:653:654:655:656:662, " ")
+topic = custom, getAllAlphaSubfields(600:610:611:630:648:650:651:653:654:655:656:662, all)
 #topic_browse = custom, getAllAlphaSubfields(600:610:611:630:648:650:651:653:654:655:656:662, " ")
 topic_browse = script(ucTopic.bsh), getTopicsWithDashes(600:610:611:630:648:650:651:653:654:655:656:662)
 
