Code fixes from old vufind version 2.4 to 3.1

--- a/local/import/marc.properties
+++ b/local/import/marc.properties
@@ -22,7 +22,7 @@ format = script(uc_format.bsh), getFormat, format_map.properties
 author = custom, removeTrailingPunct(100abcdjq)
 author_fuller = 100q, first
 #author-letter = 100a, first
-author2 = custom, removeTrailingPunct(110abcdgn:111acdegnq:400abcdjq:410abcdgn:411acdegnq:505r:700abcdjq:710abcdgn:711acdegnq:720a:773a:775a:776a:787a:800abcdjq:810abcdgn:811acdegnq) 
+author2 = 110abcdgn:111acdegnq:400abcdjq:410abcdgn:411acdegnq:505r:700abcdjq:710abcdgn:711acdegnq:720a:773a:775a:776a:787a:800abcdjq:810abcdgn:811acdegnq, cleanEnd
 #author2-role = 700e:710e
 author_additional = 505r
 author_LNK = LNK100abcdjq:LNK110abcdgn:LNK111acdegnq:LNK400abcdjq:LNK410abcdgn:LNK411acdegnq:LNK505r:LNK700abcdjq:LNK710abcdgn:LNK711acdegnq:LNK720a:LNK773a:LNK775a:LNK776a:LNK787a:LNK800abcdjq:LNK810abcdgn:LNK811acdegnq
@@ -45,6 +45,7 @@ title_browse_sort = 130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgkn
 title_uniform = 130adfghklmnoprst:240adfghklmnoprs:730adfghiklmnoprstx
 title_contents = 505a:505t
 
+
 series = 400abcdfgklnptuvx:410abcdfgklnptuvx:411acdefgklnpqtuvx:440anpvx:490avx:LNK400abcdfgklnptuvx:LNK410abcdfgklnptuvx:LNK411acdefgklnpqtuvx:LNK440anpvx:LNK490avx
 series2 = 800abcdfghjklmnopqrstuv:810abcdfghklmnoprstuv:811acdefghklnpqstuv:830adfghklmnoprstv:840ahv:LNK800abcdfghjklmnopqrstu:LNK810abcdfghklmnoprstu:LNK811acdefghklnpqstu:LNK830adfghklmnoprst:LNK840ah
 series_browse = 400abcdfgklnptu:410abcdfgklnptu:411acdefgklnpqtu:440anp:490a:LNK400abcdfgklnptu:LNK410abcdfgklnptu:LNK411acdefgklnpqtu:LNK440anp:LNK490a:800abcdfghjklmnopqrstu:810abcdfghklmnoprstu:811acdefghklnpqstu:830adfghklmnoprst:840ah:LNK800abcdfghjklmnopqrstu:LNK810abcdfghklmnoprstu:LNK811acdefghklnpqstu:LNK830adfghklmnoprst:LNK840ah, clean
@@ -63,8 +64,9 @@ contents = 500a:502abcdg:505agrtu:520abcu:526a:546a:580a:586a:LNK500a:LNK502abcd
 isbn = 020acz
 issn = 022ayz
 
-journal_browse = script(ucTitleBrowseFunctions.bsh), journalBrowse(130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp:740anp:840av:LNK130a:LNK210ab:LNK211a:LNK212a:LNK214a:LNK242abnp:LNK245abnp:LNK246abnp:LNK247abnp:LNK740anp:LNK840av)
-journal_browse_sort = script(ucTitleBrowseFunctions.bsh), journalBrowseSort(130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp:740anp:840av:LNK130a:LNK210ab:LNK211a:LNK212a:LNK214a:LNK242abnp:LNK245abnp:LNK246abnp:LNK247abnp:LNK740anp:LNK840av)
+journal_browse = {130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp:740anp:840av:LNK130a:LNK210ab:LNK211a:LNK212a:LNK214a:LNK242abnp:LNK245abnp:LNK246abnp:LNK247abnp:LNK740anp:LNK840avd} ? (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's')
+journal_browse_sort = {130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp:740anp:840av:LNK130a:LNK210ab:LNK211a:LNK212a:LNK214a:LNK242abnp:LNK245abnp:LNK246abnp:LNK247abnp:LNK740anp:LNK840av} ? (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's')
+
 
 #  topic is Topic/Genre
 topic = custom, getAllAlphaSubfields(600:610:611:630:648:650:651:653:654:655:656:662, all)
