Sean Filipov: Trimmed all possible extra spaces in barcode output.

--- a/local/import/marc.properties
+++ b/local/import/marc.properties
@@ -64,7 +64,8 @@ contents = 500a:502abcdg:505agrtu:520abcu:526a:546a:580a:586a:LNK500a:LNK502abcd
 isbn = 020acz
 issn = 022ayz
 
-barcode = 097b
+barcode = 097b, clean
+
 journal_browse = {130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp:740anp:840av:LNK130a:LNK210ab:LNK211a:LNK212a:LNK214a:LNK242abnp:LNK245abnp:LNK246abnp:LNK247abnp:LNK740anp:LNK840avd} ? (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's')
 journal_browse_sort = {130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp:740anp:840av:LNK130a:LNK210ab:LNK211a:LNK212a:LNK214a:LNK242abnp:LNK245abnp:LNK246abnp:LNK247abnp:LNK740anp:LNK840av} ? (000[7] = 'b' || 000[7] = 'i' || 000[7] = 's')
 
