--- a/local/import/input_index.properties
+++ b/local/import/input_index.properties
@@ -1,11 +1,14 @@
 # index specification definitions used by both the Syndetics toc core config and the Syndetics summary core
 # the assumption is that toc data files won't contain summary info, and summary data files won't
 # contain toc data
-id = custom(org.solrmarc.index.SynTocEncode), getISBNUniq()
+
+#id = custom(org.solrmarc.index.SynTocEncode), getISBNUniq()
+id = custom(org.solrmarc.index.SynTocEncode), getISBNUniq
 
 # include ALL ISBNs in the record as searchable entries in the toc or summary core
 # note if a given Syndetics data entry contains no ISBN no record will be added.
-isbn_text = customDeleteRecordIfFieldEmpty(org.solrmarc.index.SynTocEncode), getISBNAll()
+#isbn_text = customDeleteRecordIfFieldEmpty(org.solrmarc.index.SynTocEncode), getISBNAll()
+isbn_text = custom(org.solrmarc.index.SynTocEncode), getISBNAll, DeleteRecordIfFieldEmpty
 
 #include the author field and the title field from the syndetics data in the toc and summary cores
 # this is done to allow debugging the data when a mismatch is found
