--- a/local/import/toc_config.properties
+++ b/local/import/toc_config.properties
@@ -12,7 +12,7 @@ solr.path = REMOTE
 solr.indexer.properties = input_index.properties
 
 # URL of running solr search engine to cause updates to be recognized.
-solr.hosturl = http://glacier.lib.uchicago.edu:8080/solr/toc
+solr.hosturl = http://localhost:8080/solr/toc
 
 solrmarc.path = .
 
