Author sort fix. Bug 19893

--- a/local/import/marc.properties
+++ b/local/import/marc.properties
@@ -29,6 +29,7 @@ author_LNK = LNK100abcdjq:LNK110abcdgn:LNK111acdegnq:LNK400abcdjq:LNK410abcdgn:L
 author_contents = 505a:505r
 author_browse = script(ucAuthorBrowseFunctions.bsh), getAuthorBrowseFieldsAsSet(100abcdjq:110abcdgn:111acdegnq:400abcdfklnpt:410abcdfgklnpt:411acdefklnpqt:534a:700abcdfjklmnopqrst:710abcdfgklmnoprst:711acdefgklnpqst:720a:773a:775a:776a:800abcdfjklmnopqrst:810abcdfgklmnoprst:811acdefglnpqst:LNK100abcdjq:LNK110abcdgn:LNK111acdegnq:LNK400abcdfklnpt:LNK410abcdfgklnpt:LNK411acdefklnpqt:LNK534a:LNK700abcdfjklmnopqrst:LNK710abcdfgklmnoprst:LNK711acdefgklnpqst:LNK720a:LNK773a:LNK775a:LNK776a:LNK800abcdfjklmnopqrst:LNK810abcdfgklmnoprst:LNK811acdefglnpqst)
 author_facet = script(ucAuthorBrowseFunctions.bsh), getAuthorBrowseFieldsAsSet(100abcdjq:110abcdgn:111acdegnq:400abcdjq:410abcdgn:411acdegnq:700abcdjq:710abcdgn:711acdegnq:720a:773a:775a:776a:787a:800abcdjq:810abcdgn:811acdegnq)
+author_sort = 100abcdjq:110abcdgn:111acdegnq, clean
 
 title = 245abdefgknps, first
 title_sub = 245b, first
@@ -40,8 +41,8 @@ title_old = 526a:710t:711t
 title_LNK = LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t
 title_new = 785ast:LNK785ast
 title_sort = custom, getSortableTitle
-title_browse = 130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t, clean
-title_browse_sort = 130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t, clean
+title_browse = 130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t
+title_browse_sort = 130adfklmnoprs:210ab:240adfklmnoprs:243adfklmnoprs:245abfgknps:246abnp:247abnp:534t:700fklmnoprst:710fklmnoprst:711fklnpst:730adfklmnoprs:740anp:775t:776t:LNK130adfklmnoprs:LNK210ab:LNK240adfklmnoprs:LNK243adfklmnoprs:LNK245abfgknps:LNK246abnp:LNK247abnp:LNK534t:LNK700fklmnoprst:LNK710fklmnoprst:LNK711fklnpst:LNK730adfklmnoprs:LNK740anp:LNK775t:LNK776t, cleanEnd ,stripInd2 
 title_uniform = 130adfghklmnoprst:240adfghklmnoprs:730adfghiklmnoprstx
 title_contents = 505a:505t
 
