--- a/local/import/marc_local.properties
+++ b/local/import/marc_local.properties
@@ -20,11 +20,11 @@
 #callnumber-label = script(callnumber.bsh), getCallNumberLabel(090a:050a)
 #publishDate = script(getdate.bsh), getDate
 #illustrated = script(illustrated.bsh), isIllustrated
-dewey-hundreds = script(dewey.bsh), getDeweyNumber(082a:083a, 100), ddc22_map.properties(hundreds)
-dewey-tens = script(dewey.bsh), getDeweyNumber(082a:083a, 10), ddc22_map.properties(tens)
-dewey-ones = script(dewey.bsh), getDeweyNumber(082a:083a, 1), ddc22_map.properties(ones)
-dewey-full = script(dewey.bsh), getDeweySearchable(082a:083a)
-dewey-sort = script(dewey.bsh), getDeweySortable(082a:083a)
+#dewey-hundreds = script(dewey.bsh), getDeweyNumber(082a:083a, 100), ddc22_map.properties(hundreds)
+#dewey-tens = script(dewey.bsh), getDeweyNumber(082a:083a, 10), ddc22_map.properties(tens)
+#dewey-ones = script(dewey.bsh), getDeweyNumber(082a:083a, 1), ddc22_map.properties(ones)
+#dewey-full = script(dewey.bsh), getDeweySearchable(082a:083a)
+#dewey-sort = script(dewey.bsh), getDeweySortable(082a:083a)
 
 # Uncomment the following lines to track history of indexing times for RSS feeds,
 # OAI-PMH server and other updates.  The parameter to these functions must be the 
