Dewey fields casted out

--- a/local/import/marc_ole.properties
+++ b/local/import/marc_ole.properties
@@ -25,8 +25,8 @@ callnumber-search = 097a:097ab:098a:098ab:099a:099ab
 #callnumber-sort = 097a:098a:099a
 
 
-dewey-hundreds = custom, getDeweyNumber(097a:098a:099a, 100), ddc22_map.properties(hundreds)
-dewey-tens = custom, getDeweyNumber(097a:098a:099a, 10), ddc22_map.properties(tens)
-dewey-ones = custom, getDeweyNumber(097a:098a:099a, 1), ddc22_map.properties(ones)
-dewey-full = custom, getDeweySearchable(097a:098a:099a)
-dewey-raw = custom, getCallNumberByType(097a:098a:099a,t,DDC)
+#dewey-hundreds = custom, getDeweyNumber(097a:098a:099a, 100), ddc22_map.properties(hundreds)
+#dewey-tens = custom, getDeweyNumber(097a:098a:099a, 10), ddc22_map.properties(tens)
+#dewey-ones = custom, getDeweyNumber(097a:098a:099a, 1), ddc22_map.properties(ones)
+#dewey-full = custom, getDeweySearchable(097a:098a:099a)
+#dewey-raw = custom, getCallNumberByType(097a:098a:099a,t,DDC)
