Converted beanshells to java.

--- a/local/import/marc.properties
+++ b/local/import/marc.properties
@@ -17,7 +17,10 @@ recordtype = "marc"
 allfields = custom, getAllSearchableFieldsAsSet(100, 900)
 
 language = 008[35-37]:041a:041d:041e, language_map.properties
-format = script(uc_format.bsh), getFormat, format_map.properties
+#format = script(ucFormat), getFormat, format_map.properties
+
+format = custom(org.vufind.index.ucFormat), getFormat, format_map.properties
+
 
 author = custom, removeTrailingPunct(100abcdjq)
 author_fuller = 100q, first
@@ -27,8 +30,13 @@ author2 = 110abcdgn:111acdegnq:400abcdjq:410abcdgn:411acdegnq:505r:700abcdjq:710
 author_additional = 505r
 author_LNK = LNK100abcdjq:LNK110abcdgn:LNK111acdegnq:LNK400abcdjq:LNK410abcdgn:LNK411acdegnq:LNK505r:LNK700abcdjq:LNK710abcdgn:LNK711acdegnq:LNK720a:LNK773a:LNK775a:LNK776a:LNK787a:LNK800abcdjq:LNK810abcdgn:LNK811acdegnq
 author_contents = 505a:505r
-author_browse = script(ucAuthorBrowseFunctions.bsh), getAuthorBrowseFieldsAsSet(100abcdjq:110abcdgn:111acdegnq:400abcdfklnpt:410abcdfgklnpt:411acdefklnpqt:534a:700abcdfjklmnopqrst:710abcdfgklmnoprst:711acdefgklnpqst:720a:773a:775a:776a:800abcdfjklmnopqrst:810abcdfgklmnoprst:811acdefglnpqst:LNK100abcdjq:LNK110abcdgn:LNK111acdegnq:LNK400abcdfklnpt:LNK410abcdfgklnpt:LNK411acdefklnpqt:LNK534a:LNK700abcdfjklmnopqrst:LNK710abcdfgklmnoprst:LNK711acdefgklnpqst:LNK720a:LNK773a:LNK775a:LNK776a:LNK800abcdfjklmnopqrst:LNK810abcdfgklmnoprst:LNK811acdefglnpqst)
-author_facet = script(ucAuthorBrowseFunctions.bsh), getAuthorBrowseFieldsAsSet(100abcdjq:110abcdgn:111acdegnq:400abcdjq:410abcdgn:411acdegnq:700abcdjq:710abcdgn:711acdegnq:720a:773a:775a:776a:787a:800abcdjq:810abcdgn:811acdegnq)
+#author_browse = script(ucAuthorBrowseFunctions.bsh), getAuthorBrowseFieldsAsSet(100abcdjq:110abcdgn:111acdegnq:400abcdfklnpt:410abcdfgklnpt:411acdefklnpqt:534a:700abcdfjklmnopqrst:710abcdfgklmnoprst:711acdefgklnpqst:720a:773a:775a:776a:800abcdfjklmnopqrst:810abcdfgklmnoprst:811acdefglnpqst:LNK100abcdjq:LNK110abcdgn:LNK111acdegnq:LNK400abcdfklnpt:LNK410abcdfgklnpt:LNK411acdefklnpqt:LNK534a:LNK700abcdfjklmnopqrst:LNK710abcdfgklmnoprst:LNK711acdefgklnpqst:LNK720a:LNK773a:LNK775a:LNK776a:LNK800abcdfjklmnopqrst:LNK810abcdfgklmnoprst:LNK811acdefglnpqst)
+author_browse = custom(org.vufind.index.ucAuthorBrowseFunctions), getAuthorBrowseFieldsAsSet(100abcdjq:110abcdgn:111acdegnq:400abcdfklnpt:410abcdfgklnpt:411acdefklnpqt:534a:700abcdfjklmnopqrst:710abcdfgklmnoprst:711acdefgklnpqst:720a:773a:775a:776a:800abcdfjklmnopqrst:810abcdfgklmnoprst:811acdefglnpqst:LNK100abcdjq:LNK110abcdgn:LNK111acdegnq:LNK400abcdfklnpt:LNK410abcdfgklnpt:LNK411acdefklnpqt:LNK534a:LNK700abcdfjklmnopqrst:LNK710abcdfgklmnoprst:LNK711acdefgklnpqst:LNK720a:LNK773a:LNK775a:LNK776a:LNK800abcdfjklmnopqrst:LNK810abcdfgklmnoprst:LNK811acdefglnpqst)
+
+#author_facet = script(ucAuthorBrowseFunctions.bsh), getAuthorBrowseFieldsAsSet(100abcdjq:110abcdgn:111acdegnq:400abcdjq:410abcdgn:411acdegnq:700abcdjq:710abcdgn:711acdegnq:720a:773a:775a:776a:787a:800abcdjq:810abcdgn:811acdegnq)
+author_facet = custom(org.vufind.index.ucAuthorBrowseFunctions), getAuthorBrowseFieldsAsSet(100abcdjq:110abcdgn:111acdegnq:400abcdjq:410abcdgn:411acdegnq:700abcdjq:710abcdgn:711acdegnq:720a:773a:775a:776a:787a:800abcdjq:810abcdgn:811acdegnq)
+
+
 author_sort = 100abcdjq:110abcdgn:111acdegnq, clean
 
 title = 245abdefgknps, first
@@ -73,9 +81,13 @@ journal_browse_sort = {130a:210ab:211a:212a:214a:242abnp:245abnp:246abnp:247abnp
 #  topic is Topic/Genre
 topic = custom, getAllAlphaSubfields(600:610:611:630:648:650:651:653:654:655:656:662, all)
 #topic_browse = custom, getAllAlphaSubfields(600:610:611:630:648:650:651:653:654:655:656:662, " ")
-topic_browse = script(ucTopic.bsh), getTopicsWithDashes(600:610:611:630:648:650:651:653:654:655:656:662)
+#topic_browse = script(ucTopic.bsh), getTopicsWithDashes(600:610:611:630:648:650:651:653:654:655:656:662)
+topic_browse = custom(org.vufind.index.ucTopic), getTopicsWithDashes(600:610:611:630:648:650:651:653:654:655:656:662)
 
-topic_facet = script(uc_trimpunct.bsh), ucGetFieldsRemoveTrailingPeriod(600abcdjq:600v:600x:600y:600z:610abcdgn:610v:610x:610y:610z:611acdegnq:611v:611x:611y:611z:630adefghklmnoprst:630v:630x:630y:630z:648a:648v:648x:648y:648z:650abcd:650v:650x:650y:650z:651a:651v:651x:651y:651z:653a:654v:654y:654z:655abv:655x:655y:655z:662abcdefgh)
+
+#topic_facet = script(uc_trimpunct.bsh), ucGetFieldsRemoveTrailingPeriod(600abcdjq:600v:600x:600y:600z:610abcdgn:610v:610x:610y:610z:611acdegnq:611v:611x:611y:611z:630adefghklmnoprst:630v:630x:630y:630z:648a:648v:648x:648y:648z:650abcd:650v:650x:650y:650z:651a:651v:651x:651y:651z:653a:654v:654y:654z:655abv:655x:655y:655z:662abcdefgh)
+
+topic_facet = custom(org.vufind.index.ucTrimPunct),  ucGetFieldsRemoveTrailingPeriod(600abcdjq:600v:600x:600y:600z:610abcdgn:610v:610x:610y:610z:611acdegnq:611v:611x:611y:611z:630adefghklmnoprst:630v:630x:630y:630z:648a:648v:648x:648y:648z:650abcd:650v:650x:650y:650z:651a:651v:651x:651y:651z:653a:654v:654y:654z:655abv:655x:655y:655z:662abcdefgh)
 
 performer = 511a
 
