--- a/local/import/marc_ole.properties
+++ b/local/import/marc_ole.properties
@@ -1,5 +1,8 @@
 
-building =  script(ucOLEcollections.bsh), getCollection
+#building =  script(ucOLEcollections.bsh), getCollection
+
+building =  custom(org.vufind.index.ucOLEcollection), getCollection
+
 item_collection = 927c:928c:929c, uc_OLEcollection_map.properties
 #item_collection = script(ucCollections.bsh), getCollection, uc_collection_map.properties
 
