--- a/local/import/marc_hathi.properties
+++ b/local/import/marc_hathi.properties
@@ -3,4 +3,7 @@ recordtype = "hathi"
 building = "Internet"
 collection = "Hathi Collection"
 
-format = script(uc_format.bsh), getHathiFormat, format_map.properties
+#format = script(uc_format.bsh), getHathiFormat, format_map.properties
+
+format = custom(org.vufind.index.ucFormat), getHathiFormat, format_map.properties
+#format = getHathiFormat, format_map.properties
