--- a/local/import/marc_sfx.properties
+++ b/local/import/marc_sfx.properties
@@ -2,9 +2,11 @@
 building = "Internet"
 recordtype = "sfx"
 
-id = script(ucSFX.bsh), getSFX
+#id = script(ucSFX.bsh), getSFX
+id = custom(org.vufind.index.ucSFX), getSFX
 
+#format = script(uc_format.bsh), getSFXformat, format_map.properties
+format =  custom(org.vufind.index.ucSFX), getSFX, format_map.properties
 
-format = script(uc_format.bsh), getSFXformat, format_map.properties
 
 issn = 022ayz:776x
