topic facet change. github issue#52

--- a/local/import/marc.properties
+++ b/local/import/marc.properties
@@ -87,8 +87,10 @@ topic_browse = custom(org.vufind.index.ucTopic), getTopicsWithDashes(600:610:611
 
 #topic_facet = script(uc_trimpunct.bsh), ucGetFieldsRemoveTrailingPeriod(600abcdjq:600v:600x:600y:600z:610abcdgn:610v:610x:610y:610z:611acdegnq:611v:611x:611y:611z:630adefghklmnoprst:630v:630x:630y:630z:648a:648v:648x:648y:648z:650abcd:650v:650x:650y:650z:651a:651v:651x:651y:651z:653a:654v:654y:654z:655abv:655x:655y:655z:662abcdefgh)
 
-topic_facet = custom(org.vufind.index.ucTrimPunct),  ucGetFieldsRemoveTrailingPeriod(600abcdjq:600v:600x:600y:600z:610abcdgn:610v:610x:610y:610z:611acdegnq:611v:611x:611y:611z:630adefghklmnoprst:630v:630x:630y:630z:648a:648v:648x:648y:648z:650abcd:650v:650x:650y:650z:651a:651v:651x:651y:651z:653a:654v:654y:654z:655abv:655x:655y:655z:662abcdefgh)
+#OLD TOPIC FACET. REDEFINED  GITHUB ISSUE #54
+#topic_facet = custom(org.vufind.index.ucTrimPunct),  ucGetFieldsRemoveTrailingPeriod(600abcdjq:600v:600x:600y:600z:610abcdgn:610v:610x:610y:610z:611acdegnq:611v:611x:611y:611z:630adefghklmnoprst:630v:630x:630y:630z:648a:648v:648x:648y:648z:650abcd:650v:650x:650y:650z:651a:651v:651x:651y:651z:653a:654v:654y:654z:655abv:655x:655y:655z:662abcdefgh)
 
+topic_facet = {600a:611a:630a:648a:650a:651a:653a:654a:655a:662a} ? ($2 matches "fast")
 performer = 511a
 
 notes = 500a:502a:503a:504a:505agrt:506abcde:507a:508a:510abc:511a:516a:518a:520ab:521ab:522a:523ab:524a:530abcd:533abcdefmn:534abcefklmnptxz:535abcdg:536abcd:537a:538a:540abcd:541abcdefh:544abcde:545ab:546ab:547a:550a:555abcd:556a:561ab:562abcde:567a:580a:581a:582a:583abcdefh:584ab:585a:586a:590a:598a:LNK520ab
