--- a/local/import/marc_sfx.properties
+++ b/local/import/marc_sfx.properties
@@ -6,7 +6,7 @@ recordtype = "sfx"
 id = custom(org.vufind.index.ucSFX), getSFX
 
 #format = script(uc_format.bsh), getSFXformat, format_map.properties
-format =  custom(org.vufind.index.ucSFX), getSFX, format_map.properties
+format =  custom(org.vufind.index.ucFormat), getSFXformat, format_map.properties
 
 
 issn = 022ayz:776x
