--- a/local/import/marc.properties
+++ b/local/import/marc.properties
@@ -61,10 +61,11 @@ title_uniform = 130adfghklmnoprst:240adfghklmnoprs:730adfghiklmnoprstx
 title_contents = 505a:505t
 
 
-series = 400abcdfgklnptuvx:410abcdfgklnptuvx:411acdefgklnpqtuvx:440anpvx:490avx:LNK400abcdfgklnptuvx:LNK410abcdfgklnptuvx:LNK411acdefgklnpqtuvx:LNK440anpvx:LNK490avx
+series = 400abcdfgklnptuvx:410abcdfgklnptuvx:411acdefgklnpqtuvx:440anpvx:490avx:LNK400abcdfgklnptuvx:LNK410abcdfgklnptuvx:LNK411acdefgklnpqtuvx:LNK440anpvx:LNK490avxi:930adfghklmnoprst:LNK930adfghklmnoprst
 series2 = 800abcdfghjklmnopqrstuv:810abcdfghklmnoprstuv:811acdefghklnpqstuv:830adfghklmnoprstv:840ahv:LNK800abcdfghjklmnopqrstu:LNK810abcdfghklmnoprstu:LNK811acdefghklnpqstu:LNK830adfghklmnoprst:LNK840ah
-series_browse = 400abcdfgklnptu:410abcdfgklnptu:411acdefgklnpqtu:440anp:490a:LNK400abcdfgklnptu:LNK410abcdfgklnptu:LNK411acdefgklnpqtu:LNK440anp:LNK490a:800abcdfghjklmnopqrstu:810abcdfghklmnoprstu:811acdefghklnpqstu:830adfghklmnoprst:840ah:LNK800abcdfghjklmnopqrstu:LNK810abcdfghklmnoprstu:LNK811acdefghklnpqstu:LNK830adfghklmnoprst:LNK840ah, clean
+series_browse = 400abcdfgklnptu:410abcdfgklnptu:411acdefgklnpqtu:440anp:490a:LNK400abcdfgklnptu:LNK410abcdfgklnptu:LNK411acdefgklnpqtu:LNK440anp:LNK490a:800abcdfghjklmnopqrstu:810abcdfghklmnoprstu:811acdefghklnpqstu:830adfghklmnoprst:840ah:LNK800abcdfghjklmnopqrstu:LNK810abcdfghklmnoprstu:LNK811acdefghklnpqstu:LNK830adfghklmnoprst:LNK840ah:LNK490avxi:930adfghklmnoprst:LNK930adfghklmnoprst, clean
 
+ 
 publisher = 260bf:261bef:262bk:264b:LNK260bf:LNK261bef:LNK262bk:LNK264b
 publishDate = custom, getPublicationDate
 publishDateSort = custom, getPublicationDate
