Video game collection(Indexing feature was added before to ./local/import/index_java/src/ucOLEcollection.java)

--- a/local/import/translation_maps/uc_locations.properties
+++ b/local/import/translation_maps/uc_locations.properties
@@ -14,6 +14,7 @@ SMedia    =Crerar Library
 SMicDDC    =Crerar Library
 SRefPer    =Crerar Library
 MssCr      =Crerar Library
+Games      =Crerar Library
 RareCr     =Crerar Library
 RaCrInc    =Crerar Library
 SciRef     =Crerar Reference
